@@ -26,10 +26,10 @@ Plans for 0.2.0
   [W] Revise terminology: open translation instead of importing
   [?] Assign Ctrl + arrow keys for moving to edit an adjacent cell
   [W] Automate delegate listings
-  [ ] Make config module use global variables for easy access
+  [D] Rewrite config module
   [D] Add a text parser
   [?] Redesign the undo/redo system
-  [ ] Make fallback encodings be a list
+  [W] Make fallback encodings be a list
   [ ] Add default and fallbck encoding selection to preferences dialog
   [ ] Update Finnish translation
 
@@ -71,6 +71,6 @@ New in PyGTK 2.8
   http://www.pygtk.org/pygtk2reference/pygtk-ref-changelog.html
  
   - gobject.GObject: deprecation warning for gobject.type_register(Class)
-  - gobject.GObject: widget.props.property_name notation
+  - gobject.GObject: widget.props.name notation
   - gtk.FileChooser: stock overwrite dialog with set_do_overwrite
-  - gtk.AboutDialog: wrap license with set_wrap_license
+  - gtk.AboutDialog: wrap license with set_wrap_license (?)
